--- a/index.html
+++ b/index.html
@@ -13,6 +13,14 @@
 </head>
 <body>
     <!-- partial:index.partial.html -->
+
+    <div class="loader-container">
+        <div class="loader loader1"><span></span></div>
+        <div class="loader loader2"><span></span></div>
+        <div class="loader loader3"><i></i></div>
+        <div class="loader loader4"><i></i></div>
+    </div>
+
     <header id="header">
         <div class="vert-text">
             <div class="p-img">
@@ -34,6 +42,13 @@
             <!-- <a href="#contacts" class="scroll-down nav-link"></a>-->
         </div>
     </header>
+
+    <div class="loader-container loader-container2">
+        <div class="loader loader1"><span></span></div>
+        <div class="loader loader2"><span></span></div>
+        <div class="loader loader3"><i></i></div>
+        <div class="loader loader4"><i></i></div>
+    </div>
     <!-- FOOTER  -->
     <!--<footer id="contacts">
       <div class="container">
