--- a/index.html
+++ b/index.html
@@ -12,66 +12,114 @@
 
 </head>
 <body>
-    <!-- partial:index.partial.html -->
+    <section id="main">
 
-    <div class="loader-container">
-        <div class="loader loader1"><span></span></div>
-        <div class="loader loader2"><span></span></div>
-        <div class="loader loader3"><i></i></div>
-        <div class="loader loader4"><i></i></div>
-    </div>
 
-    <header id="header">
-        <div class="vert-text">
-            <div class="p-img">
-                <img src="logo.png" />
+        <!-- partial:index.partial.html -->
+
+        <div class="loader-container">
+            <div class="loader loader1"><span></span></div>
+            <div class="loader loader2"><span></span></div>
+            <div class="loader loader3"><i></i></div>
+            <div class="loader loader4"><i></i></div>
+        </div>
+
+        <header id="header">
+            <div class="vert-text">
+                <div class="p-img">
+                    <img src="logo.png" />
+                </div>
+                <h3 class="bounce-effect">THE PAANWALLA</h3>
+                <h1 id="typer-size">
+                    <!-- TEXTS -->
+                    <span id="typed"></span>
+                    <div id="typed-strings">
+                        <!--<p>THE</span> </p>
+                        <p>PAANWALLA</p>-->
+                        <p><span class="#">COMING SOON</span></p>
+
+                    </div>
+                    <!-- TEXTS ENDS -->
+                </h1>
+                <!-- TITLE -->
+                <!-- <a href="#contacts" class="scroll-down nav-link"></a>-->
             </div>
-            <h3>THE PAANWALLA </h3>
-            <h1 id="typer-size">
-                <!-- TEXTS -->
-                <span id="typed"></span>
-                <div id="typed-strings">
-                    <!--<p>THE</span> </p>
-                    <p>PAANWALLA</p>-->
-                    <p><span class="#">COMING SOON</span></p>
+        </header>
+
+        <div class="loader-container loader-container2">
+            <div class="loader loader1"><span></span></div>
+            <div class="loader loader2"><span></span></div>
+            <div class="loader loader3"><i></i></div>
+            <div class="loader loader4"><i></i></div>
+        </div>
+    </section>
+
+    <!-- Contact Us Section -->
+
+    <section class="contact_us text-center">
+        <div class="content">
+            <div class="container">
+                <i class="fa fa-headphones fa-5x"></i>
+                <h1>Tell Us What You Feel</h1>
+                <h4>Feel Free To Contact Us Any Time</h4>
+                <div class="row">
+                    <form id="contact-form" action="https://formspree.io/f/xblgqqnq" method="POST">
+                        <div class="form-group">
+                            <div class="form-row">
+                                <div class="col">
+                                    <input type="text" name="name" class="form-control" placeholder="Full Name" required>
+                                </div>
+                                <div class="col">
+                                    <input type="email" name="email" class="form-control" placeholder="Email Address" required>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <textarea placeholder="Your Message" class="form-control" name="message" rows="10" required></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-lg btn-dark btn-block">Submit Form</button>
+                    </form>
 
                 </div>
-                <!-- TEXTS ENDS -->
-            </h1>
-            <!-- TITLE -->
-            <!-- <a href="#contacts" class="scroll-down nav-link"></a>-->
+            </div>
         </div>
-    </header>
+    </section>
 
-    <div class="loader-container loader-container2">
-        <div class="loader loader1"><span></span></div>
-        <div class="loader loader2"><span></span></div>
-        <div class="loader loader3"><i></i></div>
-        <div class="loader loader4"><i></i></div>
-    </div>
-    <!-- FOOTER  -->
-    <!--<footer id="contacts">
-      <div class="container">
-        <div class="row">
-          <div class="col-md-6 col-md-offset-3 text-center">
-            <h3 class="Gaurav">Subscribe For New Updates</h3>
-                    <hr class="style17">-->
-    <!-- 		FORMS		 -->
-    <!--<form>
-            <input type="text" placeholder="Enter First Name"/><br>
-                    <input type="text" placeholder="Enter Last Name"/><br>
-                    <input type="text" placeholder="Enter Your Email"/><br>
-                    <button>Subscribe</button>
-                </form>
-            <p>CODEPEN</p>
-          </div>
-        </div>
-      </div>
-    </footer>-->
+
+
     <!-- partial -->
     <script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
     <script src='//maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js'></script>
     <script src="./script.js"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            const form = document.getElementById("contact-form");
+
+            form.addEventListener("submit", function (e) {
+                e.preventDefault();
+
+                const formData = new FormData(form);
+
+                fetch(form.action, {
+                    method: "POST",
+                    body: formData,
+                    headers: {
+                        'Accept': 'application/json'
+                    }
+                }).then(response => {
+                    if (response.ok) {
+                        form.reset();
+                        alert("Form submitted successfully!");
+                    } else {
+                        alert("Oops! There was a problem submitting your form.");
+                    }
+                }).catch(error => {
+                    alert("Error: " + error.message);
+                });
+            });
+        });
+    </script>
+
 
 </body>
 </html>
