--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <div class="content">
             <div class="container">
                 <i class="fa fa-headphones fa-5x"></i>
-                <h1>Tell Us What You Feel</h1>
-                <h4>Feel Free To Contact Us Any Time</h4>
+                
+                <h1> Contact Us </h1>
                 <div class="row">
                     <form id="contact-form" action="https://formspree.io/f/xblgqqnq" method="POST">
                         <div class="form-group">
